@@ -1,3 +1,8 @@
+2006-06-13 Sandro Santilli <strk@refractions.net>
+
+	* source/geom/Geometry.cpp: added self comparison check
+	in compareTo().
+	
 2006-06-12 Sandro Santilli <strk@refractions.net>
 
 	* source/simplify/LineSegmentIndex.cpp: explicitly initialized
